see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

08-Oct-2009 Andrew Eddie
+ Added SERVER_UTC and USER_UTC filters to JForm::filter to convert user supplied dates to UTC server or UTC user time respectively.
+ Added access argument to JHtmlJGrid::published to only display the icon without click action if not permitted to perform the action.
+ Added save-as-copy support to JControllerForm.
+ Added access control checks to JControllerForm with overrides for extended classes (_allowAdd, _allowEdit, _allowSave).
+ Hooked in access controls to backend com_content toolbars, views and controllers.

07-Oct-2009 Ercan Ozkaya
 # [#18304] require, require_once, include, & include_once are statements, not functions (Contributed by Joseph LeBlanc)

07-Oct-2009 Andrew Eddie
# Fixed static/object usage bug for default in JFilterInput::clean (sync'd with 1.5)

06-Oct-2009 Ron Severdia
# BlueStork CSS cleanup
# Layout fixes for com_contact, com_menus, com_users, com_weblinks
# Grid CSS fixed.

06-Oct-2009 Andrew Eddie
^ Loop optimisation in JDocumentHTML::countModules

05-Oct-2009 Mark Dexter
# Fixed problems when moving & re-ordering Categories in Category Manager

03-Oct-2009 Ercan Ozkaya
 + Added content form view for frontend
 ^ Changed error handling in JHtml
 - Removed reduntant allowAllClose option from calls to JPaneSliders
 # Fixed a broken index.html file
 # Fixed an incomplete CSRF check
 # Fixed access check in frontpage
 # Fixed a fatal error in com_content

02-Oct-2009 Ron Severdia
# Clean up edit category layout
# CSS fixes for high-contrast/text sizer parameters

03-Oct-2009 Andrew Eddie
# Fixed bug preventing frontend login.
