@@ -70,19 +70,19 @@ class JApplicationHelper
 			$obj->id	= 0;
 			$obj->name	= 'site';
 			$obj->path	= JPATH_SITE;
-			$clients[0] = clone($obj);
+			$clients[0] = clone $obj;
 
 			// Administrator Client
 			$obj->id	= 1;
 			$obj->name	= 'administrator';
 			$obj->path	= JPATH_ADMINISTRATOR;
-			$clients[1] = clone($obj);
+			$clients[1] = clone $obj;
 
 			// Installation Client
 			$obj->id	= 2;
 			$obj->name	= 'installation';
 			$obj->path	= JPATH_INSTALLATION;
-			$clients[2] = clone($obj);
+			$clients[2] = clone $obj;
 		}
 
 		// If no client id has been passed return the whole array
